# sht20

./: Cargo.toml  LICENCE
.cargo/: config.toml
src/: lib.rs
